--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,7 @@
-/* Outer spacing */
 .nav-wrapper {
   padding: 40px 0;
   background: #ECF1F7;
 }
-
-/* Center alignment */
 .nav-content {
   max-width: 1200px;
   margin: auto;
@@ -13,13 +10,24 @@
   gap: 50px;
 }
 
-/* Logo */
+
 .nav-logo {
-  width: 60px;   
+  width: 60px;
   height: 100px;
 }
 
-/* Rectangle navbar */
+
+.brand {
+  display: flex;
+  align-items: center;
+}
+
+
+.brand-name {
+  display: none;
+}
+
+
 .nav-container {
   width: 1105px;
   height: 59px;
@@ -32,7 +40,6 @@
   border: 1px solid #e6e6e6;
 }
 
-/* Links */
 .nav-link {
   text-decoration: none;
   color: #6c6c6c;
@@ -43,8 +50,87 @@
   transition: 0.3s ease;
 }
 
-/* Active */
 .nav-link.active {
   background: #F5A40C;
   color: #1d1b1b;
+}
+
+.hamburger {
+  display: none;
+}
+.mobile-menu {
+  display: none;
+}
+
+@media (max-width: 1024px) {
+
+  .nav-content {
+    justify-content: space-between;
+    padding: 0 20px; 
+  }
+
+
+  .nav-container {
+    display: none;
+  }
+
+
+  .brand {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+
+ 
+  .brand-name {
+    display: inline-block;
+    font-size: 18px;
+    font-weight: 600;
+    color:#d58b1f;
+  }
+
+ 
+  .nav-logo {
+    width: 45px;
+    height: auto;
+  }
+
+ 
+  .hamburger {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    cursor: pointer;
+  }
+
+  .hamburger span {
+    width: 25px;
+    height: 3px;
+    background: #1d1b1b;
+    border-radius: 2px;
+  }
+
+  .mobile-menu {
+    display: none;
+    flex-direction: column;
+    background: #ffffff;
+    padding: 20px;
+    gap: 20px;
+    border-top: 1px solid #e6e6e6;
+  }
+
+  .mobile-menu.open {
+    display: flex;
+  }
+
+  .mobile-menu a {
+    text-decoration: none;
+    color: #6c6c6c;
+    font-size: 16px;
+  }
+
+  .mobile-menu a.active {
+    color: #F5A40C;
+    font-weight: 600;
+  }
 }
