--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,52 +1,43 @@
 .nav-wrapper {
-  padding: 40px 0;
+  padding: 50px 0;
   background: #ECF1F7;
 }
+
 .nav-content {
-  max-width: 1200px;
+  max-width: 1300px; 
   margin: auto;
   display: flex;
   align-items: center;
-  gap: 50px;
+  gap: 60px;
 }
 
 
 .nav-logo {
-  width: 60px;
-  height: 100px;
-}
-
-
-.brand {
-  display: flex;
-  align-items: center;
-}
-
-
-.brand-name {
-  display: none;
+  width: 75px;
+  height: auto;
 }
 
 
 .nav-container {
-  width: 1105px;
-  height: 59px;
+  width: 1200px;  
+  height: 75px;   
   background: #ffffff;
-  border-radius: 14px;
+  border-radius: 18px; 
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 70px;
+  gap: 80px; 
   border: 1px solid #e6e6e6;
 }
 
+/* Nav Links */
 .nav-link {
   text-decoration: none;
   color: #6c6c6c;
-  font-size: 16px;
-  font-weight: 500;
-  padding: 8px 22px;
-  border-radius: 30px;
+  font-size: 18px;   
+  font-weight: 600;  
+  padding: 12px 26px; 
+  border-radius: 40px;
   transition: 0.3s ease;
 }
 
@@ -91,10 +82,11 @@
 
  
   .nav-logo {
-    width: 45px;
+    width: 75px;
     height: auto;
   }
 
+ 
  
   .hamburger {
     display: flex;
