--- a/src/pages/Gallery/gallery.css
+++ b/src/pages/Gallery/gallery.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: 'Poppins';
+  src: url('../../assets/fonts/Poppins-SemiBold.ttf') format('truetype');
+  font-weight: 600;
+}
+
 .gallery-wrapper {
   width: 100%;
   padding: 120px 0;
@@ -8,13 +14,11 @@
   margin-bottom: 140px;
 }
 
-/* Font */
 .poppins {
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
 }
 
-/* Title */
 
 .gallery-title {
   font-size: 44px;
