done sec4 in home and changed naming conventions

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,27 +1,18 @@
-/* ========================= */
-/* FIXED NAVBAR */
-/* ========================= */
 
 .nav-wrapper {
-  padding: 50px 0;
+  padding: 30px 0;
   background: #ECF1F7;
 
-  position: fixed;      /* FULLY FIXED */
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 1000;
 }
 
-/* Spacer for content */
-.navbar-spacer {
-  height: 170px;   /* adjust if needed */
+.nav-wrapper + * {
+  margin-top: 150px;  
 }
-
-/* ========================= */
-/* DESKTOP */
-/* ========================= */
-
 .nav-content {
   max-width: 1300px;
   margin: auto;
@@ -76,6 +67,15 @@
 
 @media (max-width: 1024px) {
 
+  .nav-wrapper {
+    padding: 15px 0;
+  }
+
+  /* Smaller offset for mobile */
+  .nav-wrapper + * {
+    margin-top: 110px;
+  }
+
   .nav-content {
     justify-content: space-between;
     padding: 0 20px;
@@ -102,7 +102,6 @@
     height: auto;
   }
 
-  /* Hamburger */
   .hamburger {
     display: flex;
     flex-direction: column;
@@ -118,7 +117,6 @@
     transition: 0.3s ease;
   }
 
-  /* Cross Animation */
   .hamburger.active span:nth-child(1) {
     transform: rotate(45deg) translate(5px, 5px);
   }
@@ -131,7 +129,6 @@
     transform: rotate(-45deg) translate(6px, -6px);
   }
 
-  /* Mobile Menu */
   .mobile-menu {
     display: none;
     flex-direction: column;
